@@ -2,4 +2,3 @@ expansion_order.texi(,5)
 expansion_order.texi(,10) 
 expansion_order.texi(bidule,11) \arg\
 expansion_order.texi(bidule,11) 
-expansion_order.texi(bidule,11) 
