@@ -84,8 +84,7 @@ ul.toc {list-style: none}
 <dl compact="compact">
 <dt> name1 <a name="id1"></a></dt>
 <dd><p>text1, arg1 
-</p>
-</dd>
+</p></dd>
 <dt> name2 <a name="id2"></a></dt>
 <dd><p>text2
 </p></dd>
